--- a/pHash.vcxproj
+++ b/pHash.vcxproj
@@ -176,6 +176,7 @@
     <ClCompile Include="dirent.c" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="md5.cpp" />
+    <ClCompile Include="MemWalk.cpp" />
     <ClCompile Include="node.cpp" />
     <ClCompile Include="ph_fft.c" />
     <ClCompile Include="pHash.cpp" />
@@ -186,6 +187,7 @@
     <ClInclude Include="dirent.h" />
     <ClInclude Include="main.h" />
     <ClInclude Include="md5.h" />
+    <ClInclude Include="MemWalk.h" />
     <ClInclude Include="node.h" />
     <ClInclude Include="ph_fft.h" />
     <ClInclude Include="pHash.h" />
