added optargs and comments

--- a/pHash.vcxproj
+++ b/pHash.vcxproj
@@ -174,6 +174,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="dirent.c" />
+    <ClCompile Include="getopt.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="md5.cpp" />
     <ClCompile Include="MemWalk.cpp" />
@@ -184,6 +185,7 @@
   <ItemGroup>
     <ClInclude Include="bmp.h" />
     <ClInclude Include="dirent.h" />
+    <ClInclude Include="getopt.h" />
     <ClInclude Include="main.h" />
     <ClInclude Include="md5.h" />
     <ClInclude Include="MemWalk.h" />
